--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "gen:buildinfo": "node scripts/gen-build-info.mjs",
+    "gen:icons": "node scripts/gen-icons.mjs",
     "predev": "npm run gen:buildinfo",
     "dev": "vite",
     "prebuild": "npm run gen:buildinfo",
@@ -29,6 +30,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "pngjs": "^7.0.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4",
