Add register policy audit script

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "gen:buildinfo": "node scripts/gen-build-info.mjs",
     "gen:icons": "node scripts/gen-icons.mjs",
+    "audit:register": "node scripts/audit-register-policy.mjs",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
