Add unit tests for register policy audit

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,5 +32,8 @@ jobs:
       - name: Register policy audit
         run: npm run audit:register
 
+      - name: Tests
+        run: npm test
+
       - name: Build
         run: npm run build
