Quests: migrate storage to v2 key + add tests

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "gen:buildinfo": "node scripts/gen-build-info.mjs",
     "gen:icons": "node scripts/gen-icons.mjs",
     "audit:register": "node scripts/audit-register-policy.mjs",
-    "test": "node --test",
+    "test": "node --experimental-strip-types --test",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
